--- a/about-us.html
+++ b/about-us.html
@@ -118,7 +118,7 @@
                                 <li><a class="dropdown-item" href="portfolio-masonary.html">PORTFOLIO / MASONRY</a></li>
                                 <li><a class="dropdown-item" href="portfolio-interactive.html">PORTFOLIO /
                                         INTERACTIVE</a></li>
-                                <li><a class="dropdown-item" href="portfolio-single.html">PORTFOLIO SINGLE</a></li>
+                                <li><a class="dropdown-item" href="#">PORTFOLIO SINGLE</a></li>
                             </ul> -->
                         </li>
                         <li class="nav-item dropdown">
@@ -183,7 +183,7 @@
         </div>
     </div>
     
-    
+
     <section class="creative_agency about_us">
         <div class="container">
             <div class="row align-items-center">
