--- a/portfolio-3-column.html
+++ b/portfolio-3-column.html
@@ -83,7 +83,7 @@
                                 <li><a class="dropdown-item" href="portfolio-masonary.html">PORTFOLIO / MASONRY</a></li>
                                 <li><a class="dropdown-item" href="portfolio-interactive.html">PORTFOLIO /
                                         INTERACTIVE</a></li>
-                                <li><a class="dropdown-item" href="portfolio-single.html">PORTFOLIO SINGLE</a></li>
+                                <li><a class="dropdown-item" href="#">PORTFOLIO SINGLE</a></li>
                             </ul>
                         </li>
                         <li class="nav-item dropdown">
@@ -159,15 +159,15 @@
                             <div class="project_top">
                                 <img src="assets/img/project/1.png" alt="">
                                 <ul class="tags list-unstyled">
-                                    <li><a href="portfolio-single.html">Branding</a></li>
-                                    <li><a href="portfolio-single.html">Ui/ux</a></li>
-                                    <li><a href="portfolio-single.html">Development</a></li>
+                                    <li><a href="#">Branding</a></li>
+                                    <li><a href="#">Ui/ux</a></li>
+                                    <li><a href="#">Development</a></li>
                                 </ul>
                             </div>
                             <div class="project_bottom">
-                                <h4><a href="portfolio-single.html">Collateral Design
+                                <h4><a href="#">Collateral Design
                                         for Globex</a></h4>
-                                <a class="project_btn" href="portfolio-single.html">View project<i
+                                <a class="project_btn" href="#">View project<i
                                         class="fa-solid fa-arrow-right"></i></a>
                             </div>
                         </div>
@@ -177,15 +177,15 @@
                             <div class="project_top">
                                 <img src="assets/img/project/3.png" alt="">
                                 <ul class="tags list-unstyled">
-                                    <li><a href="portfolio-single.html">Branding</a></li>
-                                    <li><a href="portfolio-single.html">Ui/ux</a></li>
-                                    <li><a href="portfolio-single.html">Development</a></li>
+                                    <li><a href="#">Branding</a></li>
+                                    <li><a href="#">Ui/ux</a></li>
+                                    <li><a href="#">Development</a></li>
                                 </ul>
                             </div>
                             <div class="project_bottom">
-                                <h4><a href="portfolio-single.html">Duct Tape design
+                                <h4><a href="#">Duct Tape design
                                         for Brand</a></h4>
-                                <a class="project_btn" href="portfolio-single.html">View project<i
+                                <a class="project_btn" href="#">View project<i
                                         class="fa-solid fa-arrow-right"></i></a>
                             </div>
                         </div>
@@ -195,15 +195,15 @@
                             <div class="project_top">
                                 <img src="assets/img/project/2.png" alt="">
                                 <ul class="tags list-unstyled">
-                                    <li><a href="portfolio-single.html">Branding</a></li>
-                                    <li><a href="portfolio-single.html">Ui/ux</a></li>
-                                    <li><a href="portfolio-single.html">Development</a></li>
+                                    <li><a href="#">Branding</a></li>
+                                    <li><a href="#">Ui/ux</a></li>
+                                    <li><a href="#">Development</a></li>
                                 </ul>
                             </div>
                             <div class="project_bottom">
-                                <h4><a href="portfolio-single.html">Packaging Design
+                                <h4><a href="#">Packaging Design
                                         for Sezane</a></h4>
-                                <a class="project_btn" href="portfolio-single.html">View project<i
+                                <a class="project_btn" href="#">View project<i
                                         class="fa-solid fa-arrow-right"></i></a>
                             </div>
                         </div>
@@ -213,15 +213,15 @@
                             <div class="project_top">
                                 <img src="assets/img/project/4.png" alt="">
                                 <ul class="tags list-unstyled">
-                                    <li><a href="portfolio-single.html">Branding</a></li>
-                                    <li><a href="portfolio-single.html">Ui/ux</a></li>
-                                    <li><a href="portfolio-single.html">Development</a></li>
+                                    <li><a href="#">Branding</a></li>
+                                    <li><a href="#">Ui/ux</a></li>
+                                    <li><a href="#">Development</a></li>
                                 </ul>
                             </div>
                             <div class="project_bottom">
-                                <h4><a href="portfolio-single.html">Branding Identity
+                                <h4><a href="#">Branding Identity
                                         for Haus</a></h4>
-                                <a class="project_btn" href="portfolio-single.html">View project<i
+                                <a class="project_btn" href="#">View project<i
                                         class="fa-solid fa-arrow-right"></i></a>
                             </div>
                         </div>
@@ -231,15 +231,15 @@
                             <div class="project_top">
                                 <img src="assets/img/project/6/1.png" alt="">
                                 <ul class="tags list-unstyled">
-                                    <li><a href="portfolio-single.html">Branding</a></li>
-                                    <li><a href="portfolio-single.html">Ui/ux</a></li>
-                                    <li><a href="portfolio-single.html">Development</a></li>
+                                    <li><a href="#">Branding</a></li>
+                                    <li><a href="#">Ui/ux</a></li>
+                                    <li><a href="#">Development</a></li>
                                 </ul>
                             </div>
                             <div class="project_bottom">
-                                <h4><a href="portfolio-single.html">New Interface Design
+                                <h4><a href="#">New Interface Design
                                         for Watch</a></h4>
-                                <a class="project_btn" href="portfolio-single.html">View project<i
+                                <a class="project_btn" href="#">View project<i
                                         class="fa-solid fa-arrow-right"></i></a>
                             </div>
                         </div>
@@ -249,15 +249,15 @@
                             <div class="project_top">
                                 <img src="assets/img/project/6/2.png" alt="">
                                 <ul class="tags list-unstyled">
-                                    <li><a href="portfolio-single.html">Branding</a></li>
-                                    <li><a href="portfolio-single.html">Ui/ux</a></li>
-                                    <li><a href="portfolio-single.html">Development</a></li>
+                                    <li><a href="#">Branding</a></li>
+                                    <li><a href="#">Ui/ux</a></li>
+                                    <li><a href="#">Development</a></li>
                                 </ul>
                             </div>
                             <div class="project_bottom">
-                                <h4><a href="portfolio-single.html">Duct Tape design
+                                <h4><a href="#">Duct Tape design
                                         for Brand</a></h4>
-                                <a class="project_btn" href="portfolio-single.html">View project<i
+                                <a class="project_btn" href="#">View project<i
                                         class="fa-solid fa-arrow-right"></i></a>
                             </div>
                         </div>
@@ -267,15 +267,15 @@
                             <div class="project_top">
                                 <img src="assets/img/project/8.png" alt="">
                                 <ul class="tags list-unstyled">
-                                    <li><a href="portfolio-single.html">Branding</a></li>
-                                    <li><a href="portfolio-single.html">Ui/ux</a></li>
-                                    <li><a href="portfolio-single.html">Development</a></li>
+                                    <li><a href="#">Branding</a></li>
+                                    <li><a href="#">Ui/ux</a></li>
+                                    <li><a href="#">Development</a></li>
                                 </ul>
                             </div>
                             <div class="project_bottom">
-                                <h4><a href="portfolio-single.html">Brochures Mockup
+                                <h4><a href="#">Brochures Mockup
                                         for Jungle</a></h4>
-                                <a class="project_btn" href="portfolio-single.html">View project<i
+                                <a class="project_btn" href="#">View project<i
                                         class="fa-solid fa-arrow-right"></i></a>
                             </div>
                         </div>
@@ -285,15 +285,15 @@
                             <div class="project_top">
                                 <img src="assets/img/project/9.png" alt="">
                                 <ul class="tags list-unstyled">
-                                    <li><a href="portfolio-single.html">Branding</a></li>
-                                    <li><a href="portfolio-single.html">Ui/ux</a></li>
-                                    <li><a href="portfolio-single.html">Development</a></li>
+                                    <li><a href="#">Branding</a></li>
+                                    <li><a href="#">Ui/ux</a></li>
+                                    <li><a href="#">Development</a></li>
                                 </ul>
                             </div>
                             <div class="project_bottom">
-                                <h4><a href="portfolio-single.html">Book Cover Design
+                                <h4><a href="#">Book Cover Design
                                         for Writer</a></h4>
-                                <a class="project_btn" href="portfolio-single.html">View project<i
+                                <a class="project_btn" href="#">View project<i
                                         class="fa-solid fa-arrow-right"></i></a>
                             </div>
                         </div>
@@ -303,15 +303,15 @@
                             <div class="project_top">
                                 <img src="assets/img/project/10.png" alt="">
                                 <ul class="tags list-unstyled">
-                                    <li><a href="portfolio-single.html">Branding</a></li>
-                                    <li><a href="portfolio-single.html">Ui/ux</a></li>
-                                    <li><a href="portfolio-single.html">Development</a></li>
+                                    <li><a href="#">Branding</a></li>
+                                    <li><a href="#">Ui/ux</a></li>
+                                    <li><a href="#">Development</a></li>
                                 </ul>
                             </div>
                             <div class="project_bottom">
-                                <h4><a href="portfolio-single.html">Package Design
+                                <h4><a href="#">Package Design
                                         for Sticko</a></h4>
-                                <a class="project_btn" href="portfolio-single.html">View project<i
+                                <a class="project_btn" href="#">View project<i
                                         class="fa-solid fa-arrow-right"></i></a>
                             </div>
                         </div>
@@ -319,7 +319,7 @@
 
                 </div>
                 <div class="button_area text-center">
-                    <a href="portfolio-single.html" class="bg_btn_color">Load more</a>
+                    <a href="#" class="bg_btn_color">Load more</a>
                 </div>
             </div>
         </div>
