--- a/portfolio-masonary.html
+++ b/portfolio-masonary.html
@@ -83,7 +83,7 @@
                                 <li><a class="dropdown-item" href="portfolio-masonary.html">PORTFOLIO / MASONRY</a></li>
                                 <li><a class="dropdown-item" href="portfolio-interactive.html">PORTFOLIO /
                                         INTERACTIVE</a></li>
-                                <li><a class="dropdown-item" href="portfolio-single.html">PORTFOLIO SINGLE</a></li>
+                                <li><a class="dropdown-item" href="#">PORTFOLIO SINGLE</a></li>
                             </ul>
                         </li>
                         <li class="nav-item dropdown">
@@ -157,15 +157,15 @@
                     <div class="project_top">
                         <img src="assets/img/project/1.png" alt="">
                         <ul class="tags list-unstyled">
-                            <li><a href="portfolio-single.html">Branding</a></li>
-                            <li><a href="portfolio-single.html">Ui/ux</a></li>
-                            <li><a href="portfolio-single.html">Development</a></li>
+                            <li><a href="#">Branding</a></li>
+                            <li><a href="#">Ui/ux</a></li>
+                            <li><a href="#">Development</a></li>
                         </ul>
                     </div>
                     <div class="project_bottom">
-                        <h4><a href="portfolio-single.html">Collateral Design
+                        <h4><a href="#">Collateral Design
                                 for Globex</a></h4>
-                        <a class="project_btn" href="portfolio-single.html">View project<i
+                        <a class="project_btn" href="#">View project<i
                                 class="fa-solid fa-arrow-right"></i></a>
                     </div>
                 </div>
@@ -173,15 +173,15 @@
                     <div class="project_top">
                         <img src="assets/img/project/3.png" alt="">
                         <ul class="tags list-unstyled">
-                            <li><a href="portfolio-single.html">Branding</a></li>
-                            <li><a href="portfolio-single.html">Ui/ux</a></li>
-                            <li><a href="portfolio-single.html">Development</a></li>
+                            <li><a href="#">Branding</a></li>
+                            <li><a href="#">Ui/ux</a></li>
+                            <li><a href="#">Development</a></li>
                         </ul>
                     </div>
                     <div class="project_bottom">
-                        <h4><a href="portfolio-single.html">Duct Tape design
+                        <h4><a href="#">Duct Tape design
                                 for Brand</a></h4>
-                        <a class="project_btn" href="portfolio-single.html">View project<i
+                        <a class="project_btn" href="#">View project<i
                                 class="fa-solid fa-arrow-right"></i></a>
                     </div>
                 </div>
@@ -189,15 +189,15 @@
                     <div class="project_top">
                         <img src="assets/img/project/2.png" alt="">
                         <ul class="tags list-unstyled">
-                            <li><a href="portfolio-single.html">Branding</a></li>
-                            <li><a href="portfolio-single.html">Ui/ux</a></li>
-                            <li><a href="portfolio-single.html">Development</a></li>
+                            <li><a href="#">Branding</a></li>
+                            <li><a href="#">Ui/ux</a></li>
+                            <li><a href="#">Development</a></li>
                         </ul>
                     </div>
                     <div class="project_bottom">
-                        <h4><a href="portfolio-single.html">Packaging Design
+                        <h4><a href="#">Packaging Design
                                 for Sezane</a></h4>
-                        <a class="project_btn" href="portfolio-single.html">View project<i
+                        <a class="project_btn" href="#">View project<i
                                 class="fa-solid fa-arrow-right"></i></a>
                     </div>
                 </div>
@@ -205,20 +205,20 @@
                     <div class="project_top">
                         <img src="assets/img/project/4.png" alt="">
                         <ul class="tags list-unstyled">
-                            <li><a href="portfolio-single.html">Branding</a></li>
-                            <li><a href="portfolio-single.html">Ui/ux</a></li>
-                            <li><a href="portfolio-single.html">Development</a></li>
+                            <li><a href="#">Branding</a></li>
+                            <li><a href="#">Ui/ux</a></li>
+                            <li><a href="#">Development</a></li>
                         </ul>
                     </div>
                     <div class="project_bottom">
-                        <h4><a href="portfolio-single.html">Branding Identity
+                        <h4><a href="#">Branding Identity
                                 for Haus</a></h4>
-                        <a class="project_btn" href="portfolio-single.html">View project<i
+                        <a class="project_btn" href="#">View project<i
                                 class="fa-solid fa-arrow-right"></i></a>
                     </div>
                 </div>
             </div>
-            <a href="portfolio-single.html" class="bg_btn_color">Load more</a>
+            <a href="#" class="bg_btn_color">Load more</a>
         </div>
     </section>
     <!-- Project -->
