--- a/portfolio-single.html
+++ b/portfolio-single.html
@@ -83,7 +83,7 @@
                                 <li><a class="dropdown-item" href="portfolio-masonary.html">PORTFOLIO / MASONRY</a></li>
                                 <li><a class="dropdown-item" href="portfolio-interactive.html">PORTFOLIO /
                                         INTERACTIVE</a></li>
-                                <li><a class="dropdown-item" href="portfolio-single.html">PORTFOLIO SINGLE</a></li>
+                                <li><a class="dropdown-item" href="#">PORTFOLIO SINGLE</a></li>
                             </ul>
                         </li>
                         <li class="nav-item dropdown">
@@ -156,9 +156,9 @@
                 <div class="top">
                     <img src="assets/img/project/single.png" alt="" class="min_img">
                     <ul class="tags list-unstyled">
-                        <li><a href="portfolio-single.html" class="bg_btn">Branding</a></li>
-                        <li><a href="portfolio-single.html" class="bg_btn">Ui/ux</a></li>
-                        <li><a href="portfolio-single.html" class="bg_btn">Development</a></li>
+                        <li><a href="#" class="bg_btn">Branding</a></li>
+                        <li><a href="#" class="bg_btn">Ui/ux</a></li>
+                        <li><a href="#" class="bg_btn">Development</a></li>
                     </ul>
                     <div class="main_content">
                         <div class="section_title">
@@ -264,15 +264,15 @@
                             <div class="project_top">
                                 <img src="assets/img/project/8.png" alt="">
                                 <ul class="tags list-unstyled">
-                                    <li><a href="portfolio-single.html">Branding</a></li>
-                                    <li><a href="portfolio-single.html">Ui/ux</a></li>
-                                    <li><a href="portfolio-single.html">Development</a></li>
+                                    <li><a href="#">Branding</a></li>
+                                    <li><a href="#">Ui/ux</a></li>
+                                    <li><a href="#">Development</a></li>
                                 </ul>
                             </div>
                             <div class="project_bottom">
-                                <h4><a href="portfolio-single.html">Brochures Mockup
+                                <h4><a href="#">Brochures Mockup
                                         for Jungle</a></h4>
-                                <a class="project_btn" href="portfolio-single.html">View project<i
+                                <a class="project_btn" href="#">View project<i
                                         class="fa-solid fa-arrow-right"></i></a>
                             </div>
                         </div>
@@ -282,15 +282,15 @@
                             <div class="project_top">
                                 <img src="assets/img/project/9.png" alt="">
                                 <ul class="tags list-unstyled">
-                                    <li><a href="portfolio-single.html">Branding</a></li>
-                                    <li><a href="portfolio-single.html">Ui/ux</a></li>
-                                    <li><a href="portfolio-single.html">Development</a></li>
+                                    <li><a href="#">Branding</a></li>
+                                    <li><a href="#">Ui/ux</a></li>
+                                    <li><a href="#">Development</a></li>
                                 </ul>
                             </div>
                             <div class="project_bottom">
-                                <h4><a href="portfolio-single.html">Book Cover Design
+                                <h4><a href="#">Book Cover Design
                                         for Writer</a></h4>
-                                <a class="project_btn" href="portfolio-single.html">View project<i
+                                <a class="project_btn" href="#">View project<i
                                         class="fa-solid fa-arrow-right"></i></a>
                             </div>
                         </div>
@@ -300,20 +300,20 @@
                             <div class="project_top">
                                 <img src="assets/img/project/10.png" alt="">
                                 <ul class="tags list-unstyled">
-                                    <li><a href="portfolio-single.html">Branding</a></li>
-                                    <li><a href="portfolio-single.html">Ui/ux</a></li>
-                                    <li><a href="portfolio-single.html">Development</a></li>
+                                    <li><a href="#">Branding</a></li>
+                                    <li><a href="#">Ui/ux</a></li>
+                                    <li><a href="#">Development</a></li>
                                 </ul>
                             </div>
                             <div class="project_bottom">
-                                <h4><a href="portfolio-single.html">Package Design
+                                <h4><a href="#">Package Design
                                         for Sticko</a></h4>
-                                <a class="project_btn" href="portfolio-single.html">View project<i
+                                <a class="project_btn" href="#">View project<i
                                         class="fa-solid fa-arrow-right"></i></a>
                             </div>
                         </div>
                     </div>
-                    <a href="portfolio-single.html" class="bg_btn_color">Explore all</a>
+                    <a href="#" class="bg_btn_color">Explore all</a>
                 </div>
             </div>
         </div>
