--- a/service.html
+++ b/service.html
@@ -83,7 +83,7 @@
                                 <li><a class="dropdown-item" href="portfolio-masonary.html">PORTFOLIO / MASONRY</a></li>
                                 <li><a class="dropdown-item" href="portfolio-interactive.html">PORTFOLIO /
                                         INTERACTIVE</a></li>
-                                <li><a class="dropdown-item" href="portfolio-single.html">PORTFOLIO SINGLE</a></li>
+                                <li><a class="dropdown-item" href="#">PORTFOLIO SINGLE</a></li>
                             </ul>
                         </li>
                         <li class="nav-item dropdown">
@@ -264,13 +264,13 @@
                     <li class="single_item list-unstyled wow fadeInLeft" data-wow-delay="0.3s">
                         <div class="all_content">
                             <div class="content">
-                                <h3><a href="portfolio-single.html">Dynamic Workflows SaaS Website</a></h3>
+                                <h3><a href="#">Dynamic Workflows SaaS Website</a></h3>
                                 <div class="category">
-                                    <span><a href="portfolio-single.html">Branding</a></span>
+                                    <span><a href="#">Branding</a></span>
                                     <span>/</span>
-                                    <span><a href="portfolio-single.html">Ui/ux</a></span>
+                                    <span><a href="#">Ui/ux</a></span>
                                     <span>/</span>
-                                    <span><a href="portfolio-single.html">Development</a></span>
+                                    <span><a href="#">Development</a></span>
                                 </div>
                             </div>
                             <i class="fa-solid fa-arrow-right"></i>
@@ -280,13 +280,13 @@
                     <li class="single_item list-unstyled wow fadeInLeft" data-wow-delay="0.5s">
                         <div class="all_content">
                             <div class="content">
-                                <h3><a href="portfolio-single.html">Branding for Art Space</a></h3>
+                                <h3><a href="#">Branding for Art Space</a></h3>
                                 <div class="category">
-                                    <span><a href="portfolio-single.html">Branding</a></span>
+                                    <span><a href="#">Branding</a></span>
                                     <span>/</span>
-                                    <span><a href="portfolio-single.html">Ui/ux</a></span>
+                                    <span><a href="#">Ui/ux</a></span>
                                     <span>/</span>
-                                    <span><a href="portfolio-single.html">Development</a></span>
+                                    <span><a href="#">Development</a></span>
                                 </div>
                             </div>
                             <i class="fa-solid fa-arrow-right"></i>
@@ -296,13 +296,13 @@
                     <li class="single_item list-unstyled wow fadeInLeft" data-wow-delay="0.7s">
                         <div class="all_content">
                             <div class="content">
-                                <h3><a href="portfolio-single.html">Financial Services Landing Page</a></h3>
+                                <h3><a href="#">Financial Services Landing Page</a></h3>
                                 <div class="category">
-                                    <span><a href="portfolio-single.html">Branding</a></span>
+                                    <span><a href="#">Branding</a></span>
                                     <span>/</span>
-                                    <span><a href="portfolio-single.html">Ui/ux</a></span>
+                                    <span><a href="#">Ui/ux</a></span>
                                     <span>/</span>
-                                    <span><a href="portfolio-single.html">Development</a></span>
+                                    <span><a href="#">Development</a></span>
                                 </div>
                             </div>
                             <i class="fa-solid fa-arrow-right"></i>
@@ -312,13 +312,13 @@
                     <li class="single_item list-unstyled wow fadeInLeft" data-wow-delay="0.9s">
                         <div class="all_content">
                             <div class="content">
-                                <h3><a href="portfolio-single.html">SaaS Landing Page design</a></h3>
+                                <h3><a href="#">SaaS Landing Page design</a></h3>
                                 <div class="category">
-                                    <span><a href="portfolio-single.html">Branding</a></span>
+                                    <span><a href="#">Branding</a></span>
                                     <span>/</span>
-                                    <span><a href="portfolio-single.html">Ui/ux</a></span>
+                                    <span><a href="#">Ui/ux</a></span>
                                     <span>/</span>
-                                    <span><a href="portfolio-single.html">Development</a></span>
+                                    <span><a href="#">Development</a></span>
                                 </div>
                             </div>
                             <i class="fa-solid fa-arrow-right"></i>
@@ -328,13 +328,13 @@
                     <li class="single_item list-unstyled wow fadeInLeft" data-wow-delay="1.1s">
                         <div class="all_content">
                             <div class="content">
-                                <h3><a href="portfolio-single.html">Clothing Vendor Website Design</a></h3>
+                                <h3><a href="#">Clothing Vendor Website Design</a></h3>
                                 <div class="category">
-                                    <span><a href="portfolio-single.html">Branding</a></span>
+                                    <span><a href="#">Branding</a></span>
                                     <span>/</span>
-                                    <span><a href="portfolio-single.html">Ui/ux</a></span>
+                                    <span><a href="#">Ui/ux</a></span>
                                     <span>/</span>
-                                    <span><a href="portfolio-single.html">Development</a></span>
+                                    <span><a href="#">Development</a></span>
                                 </div>
                             </div>
                             <i class="fa-solid fa-arrow-right"></i>
@@ -343,7 +343,7 @@
                     </li>
                 </ul>
                 <div class="bottom">
-                    <a href="portfolio-single.html" class="bg_btn wow fadeInLeft" data-wow-delay="1.3s">View all
+                    <a href="#" class="bg_btn wow fadeInLeft" data-wow-delay="1.3s">View all
                         projects <i class="fa-solid fa-arrow-right"></i></a>
                 </div>
             </div>
