--- a/index.html
+++ b/index.html
@@ -689,7 +689,7 @@
                             <h5>Subscribe newsletter</h5>
                             <form action="#" class="subscribe_form">
                                 <input type="email" class="form-control" placeholder="Enter your email address">
-                                <input type="submit" class="bg_btn_color" value="Subscribe">
+                                <input type="submit" class="bg_btn_color" value="Subscribe" style="height: 40px; padding-top: 7px;">
                             </form>
                         </div>
                     </div>
@@ -726,7 +726,7 @@
             <img src="assets/img/footer/3.png" alt="" class="three wow fadeInLeft" data-wow-delay="0.1s">
         </div>
     </footer>
-    <!-- Footer -->
+    
 
     
     <script src="assets/js/jquery.min.js"></script>
