--- a/about-us.html
+++ b/about-us.html
@@ -323,19 +323,20 @@
     </section> -->
     
 
-    <section class="video_popup h_4">
+    <!-- <section class="video_popup h_4">
         <div class="popup_container" data-bg-img="assets/img/video_bg.png">
             <a href="https://www.youtube.com/watch?v=ZrroZ_EiKx4" class="popup_btn"><i class="fa-solid fa-play"></i></a>
         </div>
-    </section>
+    </section> -->
     
 
     <section class="client">
         <div class="container">
-            <div class="client_title wow fadeInLeft" data-wow-delay="0.1s">
+            <!-- <div class="client_title wow fadeInLeft" data-wow-delay="0.1s">
                 <h2>Over <span>50</span> businesses, <br>
                     companies growing with us</h2>
-            </div>
+            </div> -->
+
             <!-- <div class="min_client_area">
                 <img src="assets/img/clients/1.png" alt="" class="wow fadeInLeft" data-wow-delay="0.3s">
                 <img src="assets/img/clients/2.png" alt="" class="wow fadeInLeft" data-wow-delay="0.5s">
@@ -511,7 +512,7 @@
                             <h5>Subscribe newsletter</h5>
                             <form action="#" class="subscribe_form">
                                 <input type="email" class="form-control" placeholder="Enter your email address">
-                                <input type="submit" class="bg_btn_color" value="Subscribe">
+                                <input type="submit" class="bg_btn_color" value="Subscribe" style="height: 40px; padding-top: 7px;">
                             </form>
                         </div>
                     </div>
