--- a/blog-list.html
+++ b/blog-list.html
@@ -347,7 +347,7 @@
                             <h5>Subscribe newsletter</h5>
                             <form action="#" class="subscribe_form">
                                 <input type="email" class="form-control" placeholder="Enter your email address">
-                                <input type="submit" class="bg_btn_color" value="Subscribe">
+                                <input type="submit" class="bg_btn_color" value="Subscribe" style="height: 40px; padding-top: 7px;">
                             </form>
                         </div>
                     </div>
