--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
             <div class="min_project_area">
                 <div class="single_project wow fadeInLeft" data-wow-delay="0.5s">
                     <div class="project_top">
-                        <img src="https://res.cloudinary.com/dxofep2ep/image/upload/v1697034526/rjbq5haeca3bk5dnljia.png" alt="">
+                        <img src="https://res.cloudinary.com/dxofep2ep/image/upload/v1697034526/rjbq5haeca3bk5dnljia.png" alt="" style="border: 2px solid black;">
                         <ul class="tags list-unstyled">
                             <li><a href="#">Branding</a></li>
                             <li><a href="#">Ui/ux</a></li>
@@ -392,8 +392,7 @@
                 </div>
                 <div class="single_project wow fadeInLeft" data-wow-delay="0.5s">
                     <div class="project_top">
-                        <img src="https://res.cloudinary.com/dxofep2ep/image/upload/v1697034526/lkgzjqoswjleyhrbsmqo.png" alt="">
-                        <ul class="tags list-unstyled">
+                        <img src="https://res.cloudinary.com/dxofep2ep/image/upload/v1697034526/lkgzjqoswjleyhrbsmqo.png" alt="" style="border: 2px solid black;">
                             <li><a href="#">Branding</a></li>
                             <li><a href="#">Ui/ux</a></li>
                             <li><a href="#">Development</a></li>
@@ -407,7 +406,7 @@
                 </div>
                 <div class="single_project wow fadeInLeft" data-wow-delay="0.5s" style="padding-top: 150px;" >
                     <div class="project_top" >
-                        <img src="https://res.cloudinary.com/dxofep2ep/image/upload/v1697034526/u2e3hjfex9cjxfpqn86t.png" alt="">
+                        <img src="https://res.cloudinary.com/dxofep2ep/image/upload/v1697034526/u2e3hjfex9cjxfpqn86t.png" alt="" style="border: 2px solid black;">
                         <ul class="tags list-unstyled">
                             <li><a href="#">Branding</a></li>
                             <li><a href="#">Ui/ux</a></li>
@@ -422,7 +421,7 @@
                 </div>
                 <div class="single_project wow fadeInLeft" data-wow-delay="0.5s">
                     <div class="project_top">
-                        <img src="https://res.cloudinary.com/dxofep2ep/image/upload/v1697034527/lhpltwxbqge35rubgczn.png" alt="">
+                        <img src="https://res.cloudinary.com/dxofep2ep/image/upload/v1697034527/lhpltwxbqge35rubgczn.png" alt="" style="border: 2px solid black;">
                         <ul class="tags list-unstyled">
                             <li><a href="#">Branding</a></li>
                             <li><a href="#">Ui/ux</a></li>
@@ -577,7 +576,7 @@
                     </div>
                     <div class="col-xl-3 col-md-6">
                         <div class="single_counter wow fadeInLeft" data-wow-delay="0.5s">
-                            <h6>+ <span class="counter">17</span></h6>
+                            <h6>+ <span class="counter">24</span></h6>
                             <p>Visited <br>
                                 Conferences</p>
                         </div>
@@ -695,11 +694,11 @@
                     </div>
                 </div>
             </div>
-            <div class="footer_bottom wow fadeInLeft" data-wow-delay="0.9s">
+            <div class="footer_bottom wow fadeInLeft" data-wow-delay="0.9s" >
                 <div class="footer_bottom_list">
                     <div class="row">
-                        <div class="col-xl-6">
-                            <ul class="footer_nav list-unstyled">
+                        <div class="col-xl-6" >
+                            <ul class="footer_nav list-unstyled" >
                                 <li><a href="portfolio-2-column.html">Portfolio</a></li>
                                 <li><a href="team.html">our team</a></li>
                                 
