--- a/index.html
+++ b/index.html
@@ -393,6 +393,7 @@
                 <div class="single_project wow fadeInLeft" data-wow-delay="0.5s">
                     <div class="project_top">
                         <img src="https://res.cloudinary.com/dxofep2ep/image/upload/v1697034526/lkgzjqoswjleyhrbsmqo.png" alt="" style="border: 2px solid black;">
+                        <ul class="tags list-unstyled">
                             <li><a href="#">Branding</a></li>
                             <li><a href="#">Ui/ux</a></li>
                             <li><a href="#">Development</a></li>
